--- a/TODO
+++ b/TODO
@@ -35,36 +35,10 @@ nice to have local lists of fixmes and stuff...
 
 * Mark Edgington <edgimar@gmail.com>
 
-I recently checked out your fixme package, and think its nice -- in
-particular, I like the ability to create a list of fixmes. But, I miss
-something when I compare it with my home-made comment macros (which I provide
-below).
+I also have made macros for different people editing the same document, so
+that the comments from different people show up with a different prefix in
+them.
 
-The macros I use do the following: they both highlight a section of text, and
-print an associated comment. I also have made macros for different people
-editing the same document, so that the comments from different people show up
-with a different prefix in them.
-
-\newcommand{\addcomment}[3]
-{%
-\ifthenelse{\equal{#1}{inline}}{\textbf{#2} [\textit{\scriptsize
-#3}]}{}% comment shown inline
-\ifthenelse{\equal{#1}{footnote}}{\textbf{#2}\footnote{\scriptsize
-#3}}{}% comment as footnote
-\ifthenelse{\equal{#1}{margin}}{\marginpar{\scriptsize #3}
-\textbf{#2}}{}% comment in margin
-\ifthenelse{\equal{#1}{hidden}}{\textbf{*#2*}}{}% highlights commented
-text, but doesn't show comments
-\ifthenelse{\equal{#1}{omit}}{#2}{}% nothing changed
-}
-
-% uncomment to include comments in compiled version...
-\newcommand{\person1}[3][margin]{\addcomment{#1}{#2}{P1: #3}}
-\newcommand{\person2}[3][margin]{\addcomment{#1}{#2}{P2: #3}}
-
-% uncomment to omit comments from compiled version...
-%\newcommand{\person1}[3][omit]{\addcomment{omit}{#2}{#3}}
-%\newcommand{\person2}[3][omit]{\addcomment{omit}{#2}{#3}}
 
 * Ask for the translation of "fatal errors" in the supported languages
 
