--- a/fixme.dtx
+++ b/fixme.dtx
@@ -172,7 +172,7 @@
 % \DescribeMacro{\fxfatal*}\oarg{options}\marg{note}\marg{text}\\
 % Sometimes, you might not only want to issue a \fixme note, but also
 % highlight the relevant part of the text to which it applies. This is what I
-% call ``targeting'' the note. As of version 4, \fixme provides star'red
+% call ``targeting'' the note. As of version 4, \fixme provides starred
 % versions of its note insertion commands to do that. In star form, these
 % commands expect an additional mandatory argument containing the text to be
 % highlighted.
