Document targeted environments

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -201,6 +201,15 @@
 % As of version 4, the \texttt{afixme} environement is a synonym for
 % \texttt{anfxfatal}, and is considered deprecated.
 %
+% \subsubsection{Targeted environments}
+% \DescribeEnv{anfxnote*}
+% \DescribeEnv{anfxwarning*}
+% \DescribeEnv{anfxerror*}
+% \DescribeEnv{anfxfatal*}\oarg{options}\marg{summary}\marg{text}\\
+% \fixme environments can also be targeted to a specific portion of text. When
+% using the starred version, the environments expect one additional mandatory
+% argument: the text in question that will be highlighted.
+%
 % \subsection{Controlling the behavior of \fixme\label{sec:manual:behavior}}
 % \DescribeOption{final}
 % \DescribeOption{draft}
